[BACKLOG-11640] Update the Spoon help link to point to a page in the help system